Corrigido bug 'active' de Super Mario

--- a/assets/pages/destaques.html
+++ b/assets/pages/destaques.html
@@ -35,7 +35,7 @@
     </div>
     <section class="section-games">
        <div class="game-selection-area">
-            <div class="active" onclick="mario(event)">Super Mario</div>
+            <div id="first" class="active" onclick="mario(event)">Super Mario</div>
             <div class="" onclick="zelda(event)">The Legend of Zelda</div>
             <div class="">Pokémon</div>
             <div class="">Kirby</div>
