Reorganizado games, adicionado espaço para console virtual, adicionado informações sobre outros jogos

--- a/assets/pages/destaques.html
+++ b/assets/pages/destaques.html
@@ -37,11 +37,11 @@
        <div class="game-selection-area">
             <div id="first" class="active" onclick="mario(event)">Super Mario</div>
             <div class="" onclick="zelda(event)">The Legend of Zelda</div>
-            <div class="">Pokémon</div>
-            <div class="">Kirby</div>
-            <div class="">Metroid</div>
+            <div class="" onclick="pokemon(event)">Pokémon</div>
+            <div class="" onclick="kirby(event)">Kirby</div>
+            <div class="" onclick="metroid(event)">Metroid</div>
             <div class="" onclick="bayonetta(event)">Bayonetta</div>
-            <div class="">Outros Destaque</div>
+            <div class="" onclick="outros(event)">Outros Destaque</div>
        </div>
     </section>
     <section class="games">
@@ -52,6 +52,10 @@
             </div>
             <div class="spin-offs">
                 <span>Spin-offs e outros jogos</span>
+                <div class="games1"></div>
+            </div>
+            <div class="virtual-console">
+                <span>Console Virtual (Nintendo Switch Online)</span>
                 <div class="games1"></div>
             </div>
         </div>
