--- a/assets/pages/destaques.html
+++ b/assets/pages/destaques.html
@@ -17,7 +17,7 @@
                 <nav>
                     <ul>
                         <li><a href="../../index.html">Pagina Inicial</a></li>
-                        <li class="active"><a href="assets/pages/destaques.html">Franquias Destaque</a></li>
+                        <li class="active"><a href="destaques.html">Franquias Destaque</a></li>
                         <li><a href="">Acessórios</a></li>
                         <li><a href="">Duvidas Frequêntes</a></li>
                     </ul>
