Realizado alterações na front-page, adicionado API Twitter

--- a/assets/pages/destaques.html
+++ b/assets/pages/destaques.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
 </head>
-<body>
+<body style="background-color: #F8F8F8;">
     <header>
         <div class="header">
-            <div class="logo-area"><img src="../images/mariologo2.png" alt="logoestrela"></div>
+            <div class="logo-area"><a href="../../index.html"><img src="../images/mariologo2.png" alt="logoestrela"></a></div>
             <div class="menu">
                 <nav>
                     <ul>
@@ -62,7 +62,7 @@
     </section>
     <section>
         <div class="game-info-area hide">
-            <div class="text-area">
+            <div class="text--area">
                 <div class="game-title"></div> 
                 <div class="left-side">
                     <div class="desc-area"></div>
@@ -79,8 +79,12 @@
         </div>
     </section>
 
-
+    <footer>
+        <div>
+            Criado por André Henrique
+        </div>
+    </footer>
     <script src="../javascript/games.js"></script>
-    <script src="../javascript/script.js"></script>
+    <script src="../javascript/highlights.js"></script>
 </body>
 </html>
