--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="header">
-            <div class="logo-area"><img src="assets/images/mariologo2.png" alt="logoestrela"></div>
+            <div class="logo-area"><a href="index.html"><img src="assets/images/mariologo2.png" alt="logoestrela"></a></div>
             <div class="menu">
                 <nav>
                     <ul>
@@ -27,17 +27,25 @@
     <main>
         <div class="main-area">
             <div class="text-area">
-                <h1>Titulo de teste</h1>
-                <div>descrição de teste Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi voluptas officiis vero! Ducimus blanditiis perferendis nam veritatis? Ullam assumenda mollitia deserunt nisi repellendus, laboriosam repellat excepturi. Dignissimos quam cumque hic.</div>
+                <h1>Guia para inciantes | Nintendo Switch</h1>
+                <div class="front-desc">Esse site foi criado com a finalidade de ser um guia para novos proprietários do Nintendo Switch <br> Aqui você encontrará jogos das principais franquias Nintendo, assim como acessórios mais populares para o Nintendo Switch, e as duvidas mais frequêntes que podem surgir para os novos donos.</div>
             </div>
             <div class="picture">
                 <img src="assets/images/mariostart.png" alt="mariopic">
             </div>
+            <div class="twitter">
+                <a class="twitter-timeline" data-width="350" data-height="500" data-theme="light" href="https://twitter.com/NintendoAmerica?ref_src=twsrc%5Etfw">Tweets by NintendoAmerica</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
         </div>
+       
     </main>
 
-    <script src="assets/javascript/games.js"></script>
-    <script src="assets/javascript/script.js"></script>
+    <footer>
+        <div>
+            Criado por André Henrique
+        </div>
+    </footer>
+
 
 </body>
 </html>
