Adicionado botões de toggle em franquias destaque, melhorado estética e visualização

--- a/assets/pages/destaques.html
+++ b/assets/pages/destaques.html
@@ -47,15 +47,17 @@
     <section class="games">
         <div class="game-titles">
             <div class="main-series">
-                <span>Serie Principal de Jogos</span>
+                <div class="main-series-title"><span>Serie Principal de Jogos</span></div>
                 <div class="games1"></div>
             </div>
             <div class="spin-offs">
-                <span>Spin-offs e outros jogos</span>
+                <div class="spin-offs-title">
+                    <span>Spin-offs e outros jogos <img class="spin-plus" onclick="toggleSpinShow()" src="../images/plusicon.png" alt=""> <img class="spin-minus" onclick="toggleSpinHide()" src="../images/minusicon.png" alt=""></span>
+                </div>
                 <div class="games1"></div>
             </div>
             <div class="virtual-console">
-                <span>Console Virtual (Nintendo Switch Online)</span>
+                <div class="virtual-console-title"><span>Console Virtual (Nintendo Switch Online)<img class="vc-plus" onclick="toggleVCShow()" src="../images/plusicon.png" alt=""> <img class="vc-minus" onclick="toggleVCHide()" src="../images/minusicon.png" alt=""></span></div>
                 <div class="games1"></div>
             </div>
         </div>
