--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <footer>
         <div>
-            Criado por André Henrique
+            Criado por André Henrique de Camargo
         </div>
     </footer>
 </body>
