corrigido bug de imagens em Franquias Destaque

--- a/assets/pages/destaques.html
+++ b/assets/pages/destaques.html
@@ -83,7 +83,7 @@
 
     <footer>
         <div>
-            Criado por André Henrique
+            Criado por André Henrique de Camargo
         </div>
     </footer>
     <script src="../javascript/games.js"></script>
