Realizado alterações em responsividade de pagina inicial

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="header">
             <div class="logo-area"><a href="index.html"><img src="assets/images/mariologo2.png" alt="logoestrela"></a></div>
             <div class="menu">
+                <img onclick="openMenu()" class="menu-opener" src="assets/images/menu-opener.png" alt="">
                 <nav>
                     <ul>
                         <li class="active"><a href="index.html">Pagina Inicial</a></li>
