Adicionado função ao menu opener

--- a/assets/pages/destaques.html
+++ b/assets/pages/destaques.html
@@ -14,7 +14,7 @@
         <div class="header">
             <div class="logo-area"><a href="../../index.html"><img src="../images/mariologo2.png" alt="logoestrela"></a></div>
             <div class="menu">
-               
+                <img onclick="openMenu()" class="menu-opener" src="../images/menu-opener.png" alt="">
                 <nav>
                     <ul>
                         <li><a href="../../index.html">Pagina Inicial</a></li>
@@ -87,6 +87,7 @@
             Criado por André Henrique de Camargo
         </div>
     </footer>
+    <script src="../javascript/common.js"></script>
     <script src="../javascript/games.js"></script>
     <script src="../javascript/highlights.js"></script>
 </body>
