--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
                 <a class="twitter-timeline" data-width="350" data-height="500" data-theme="light" href="https://twitter.com/NintendoAmerica?ref_src=twsrc%5Etfw">Tweets by NintendoAmerica</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </div>
-       
     </main>
 
     <footer>
@@ -46,5 +45,7 @@
             Criado por: André Henrique de Camargo
         </div>
     </footer>
+
+    <script src="assets/javascript/common.js"></script>
 </body>
 </html>
