Realizado CSS responsivo em pagina de destaques

--- a/assets/pages/destaques.html
+++ b/assets/pages/destaques.html
@@ -74,13 +74,16 @@
             </div>
             <div class="trailer-area">
                 <h1>Veja o trailer oficial!</h1>
-                <iframe width="480" height="270" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <iframe class="trailer" width="480" height="270" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         </div>
         <div class="game-info-wait">
             <div class="wait-text">CLIQUE EM UM JOGO PARA VISUALIZAR!</div>
             <div class="wait-img"><img src="../images/mariologo.png" alt=""></div>
         </div>
     </section>
+    <div class="warning">
+        *NSO - Nintendo Switch Online
+    </div>
 
     <footer>
         <div>
